Them file LayOut.txt

--- a/HocGit.html
+++ b/HocGit.html
@@ -6,5 +6,10 @@
 <body>
 HOC GIT
 Deadline sap toi rui :/
+Co ban la hoi boi roi
+Ma thoi co gang
+Hoi thieu may man nhung ma cung may hon vai nguoi
+aaa, k biet merge roi no ra sao day
+:v :v :v
 </body>
 </html>
